# icp_calib

./: CMakeLists.txt  README.md  package.xml
ICP_config/: .camera4_transform.yaml.swp  camera3_transform.yaml  camera4_transform.yaml
config/: camera3_transform.yaml  camera4_transform.yaml  camera4_transform_ICP.yaml
launch/: _realsense_camera.launch  _rs_color_camera_1280x720_depth.launch  camera_and_workspace_bringup.launch  finibo_local.machine
rviz/: pc_camera_calib.rviz
scripts/: angleAxis_to_rpy.py  asynch_pc_camera_calib.py  crop_3h_test.py  cube_calib_hand.py  cube_icp.py  cube_pc_camera_calib.py  lib_conversion_between_transform_and_quaternion.py  pc_camera_calib.py  pc_camera_calib_cube.py  pc_camera_calib_old.py  pc_camera_calib_pcd_to_base.py  print_tf.py  publish_tf_pc_camera_calib_pcd_to_base_ros2o3d.py  save_camera3_pcd.py  save_camera3_simple_invert.py  stltest.py  testnumpy.py  testttt.py  tftest.py  tranform_test.py
