<?xml version="1.0"?>
<package format="2">
  <name>finibo_camera_calib</name>
  <version>0.0.0</version>
  <description>finibo_camera_calib package</description>

  <maintainer email="aaa@example.com">aaa</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/finibo_camera_calib</url> -->

  <depend>item_tracker</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_description</depend>
  <depend>finibo_description</depend>
  <depend>bcap_node</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>image_transport</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>



  <export></export>

</package>
